# portFFT

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: check_clang_format.yml  scorecard.yml
bench/: CMakeLists.txt  helpers.hpp  workitem.cpp  workitem_dispatcher.cpp
cmake/Modules/: FindComputeCpp.cmake  FindDPCPP.cmake  FindSYCL.cmake  PortFFTManageCTProfiles.cmake
hooks/: clang-format-all.sh  is-clang-formatted.sh
include/: portfft.hpp  sycl_fft.hpp
include/portfft/: portfft.hpp
scripts/: benchmark_reference_specification.py  generate_precomputed_fft_file.py  generate_reference_data.py  generate_twiddles.py  generate_verification_data_integration_header.py  test_reference_specification.py  verification_data_config.py
src/: defines.hpp  descriptor.hpp  enums.hpp  kernels.hpp  specialization_constant.hpp  specialization_constants.hpp  traits.hpp  type_traits.hpp  utils.hpp
src/common/: cooley_tukey_compiled_sizes.hpp  device.hpp  exceptions.hpp  factorize.hpp  global.hpp  helpers.hpp  logging.hpp  memory_views.hpp  subgroup.hpp  transfers.hpp  twiddle.hpp  twiddle_calc.hpp  workgroup.hpp  workitem.hpp
src/dispatcher/: device_dispatcher.hpp  global_dispatcher.hpp  subgroup.hpp  subgroup_dispatcher.hpp  workgroup.hpp  workgroup_dispatcher.hpp  workitem.hpp  workitem_dispatcher.hpp
src/general/: dispatcher.hpp
src/portfft/: committed_descriptor.hpp  committed_descriptor_impl.hpp  defines.hpp  descriptor.hpp  descriptor_validate.hpp  descriptor_validation.hpp  enums.hpp  specialization_constant.hpp  traits.hpp  utils.hpp
src/portfft/common/: bluestein.hpp  compiletime_tuning_profile.hpp  device_info.hpp  exceptions.hpp  global.hpp  helpers.hpp  host_dft.hpp  host_fft.hpp  logging.hpp  memory_views.hpp  runtime_tuning_profile.hpp  subgroup.hpp  subgroup_bluestein.hpp  subgroup_ct.hpp  transfers.hpp  transpose.hpp  twiddle.hpp  twiddle_calc.hpp  workgroup.hpp  workitem.hpp
src/portfft/dispatcher/: global_dispatcher.hpp  subgroup_dispatcher.hpp  workgroup_dispatcher.hpp  workitem_dispatcher.hpp
test/: CMakeLists.txt  factorize.cpp  fft_double.cpp  fft_float.cpp  fft_test_utils.hpp  subgroup.cpp  transfers.cpp  utils.hpp  workitem.cpp  workitem_double.cpp  workitem_float.cpp  workitem_test_utils.hpp
test/bench/: CMakeLists.txt  bench_cufft.cpp  bench_float.cpp  bench_manual_double.cpp  bench_onemkl.cpp  bench_rocfft.cpp  bench_utils.hpp  bench_workitem.cpp  cufft.cpp  cufft_utils.hpp  device_number_generator.hpp  launch_bench.hpp  ops_estimate.hpp  reference_dft_set.cxx  reference_dft_set.hpp  register_manual_bench.hpp  rocfft_utils.hpp  utils.hpp  workitem.cpp  workitem_dispatcher.cpp
test/bench/cufft/: CMakeLists.txt  bench_cufft.cpp  cufft_utils.hpp
test/bench/onemkl/: CMakeLists.txt  bench_closed_onemkl.cpp  bench_onemkl_utils.hpp  bench_open_onemkl.cpp
test/bench/portfft/: CMakeLists.txt  bench_float.cpp  bench_manual_double.cpp  bench_manual_float.cpp  launch_bench.hpp  register_manual_bench.hpp
test/bench/rocfft/: CMakeLists.txt  bench_rocfft.cpp  rocfft_utils.hpp
test/bench/sycl-fft/: CMakeLists.txt  bench_float.cpp  bench_manual_double.cpp  bench_manual_float.cpp  launch_bench.hpp  register_manual_bench.hpp  repro.cpp
test/bench/utils/: bench_utils.hpp  device_context.hpp  device_number_generator.hpp  ops_estimate.hpp  reference_dft_set.hpp  sycl_utils.hpp
test/clang_tidy/: CMakeLists.txt  clang_tidy_dummy.cpp
test/common/: number_generators.hpp  reference_data_wrangler.hpp  reference_dft.hpp  sub_tuple.hpp  sycl_utils.hpp  utils.hpp
test/unit_test/: CMakeLists.txt  descriptor.cpp  fft_double.cpp  fft_float.cpp  fft_test_utils.hpp  instantiate_fft_tests.hpp  print_device.cpp  print_device_info.cpp  transfers.cpp  utils.hpp  workitem_double.cpp  workitem_float.cpp
